<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_edu"
            android:icon="@drawable/ic_education_black_24dp"
            android:title="@string/nav_edu"
             />
        <item
            android:id="@+id/nav_xp"
            android:icon="@drawable/ic_experience_black_24dp"
            android:title="@string/nav_xp"
            />
        <item
            android:id="@+id/nav_skills"
            android:icon="@drawable/ic_skills_black_24dp"
            android:title="@string/nav_skills" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_projects_black_24dp"
            android:title="@string/nav_projects"
            />
        <item
            android:id="@+id/nav_honors"
            android:icon="@drawable/ic_honors_black_24dp"
            android:title="@string/nav_honors"
            />
    </group>

</menu>
