<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="55dp"
    android:background="@android:color/transparent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@android:color/tab_indicator_text"
        android:minHeight="350dp"
        android:id="@+id/title_resume">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/title_image_dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="45dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardMaxElevation="0dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    android:minWidth="100dp"
                    android:layout_alignTop="@+id/title_image_dec"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY"
                    app:riv_corner_radius="5dp"
                    app:riv_border_width="2dp"
                    app:riv_tile_mode="clamp"
                    app:riv_mutate_background="true"
                    app:riv_border_color="@android:color/black"
                    android:src="@mipmap/title_pic" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/title_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_image_dec"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:text="@string/title_name"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_linkedIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_info"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:autoLink="web"
                android:text="@string/title_linkedIn"
                android:textAlignment="viewStart"
                android:textStyle="italic|bold" />

            <TextView
                android:id="@+id/title_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_linkedIn"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:autoLink="email"
                android:lines="2"
                android:hint="@string/title_default"
                android:text="@string/title_info"
                android:textAlignment="viewStart"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/title_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_link"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:ellipsize="start"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingMultiplier="1.1"
                android:maxLength="195"
                android:maxLines="5"
                android:text="@string/title_desc"
                android:textSize="16dp"
                android:textStyle="italic" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>